--- a/src/Screen.css
+++ b/src/Screen.css
@@ -1,5 +1,5 @@
 .Screen {
-    font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+    font-family: "Helvetica Neue", Helvetica, "Lucida Grande", sans-serif; 
     font-weight: 100;
     position: absolute;
     bottom: 0px;
