--- a/src/Button.css
+++ b/src/Button.css
@@ -1,5 +1,5 @@
 .Button {
-    font-family: "Helvetica Neue", Helvetica, "Lucida Grande", sans-serif; 
+    font-family: "Helvetica Neue", HelveticaNeue, "TeX Gyre Heros", TeXGyreHeros, FreeSans, "Nimbus Sans L", "Liberation Sans", Arimo, Helvetica, Arial, sans-serif; 
     font-weight: 300;
     font-size: 1.3em;
     line-height: 45px;
